# laser-cholera

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.MD  README.rst  pyproject.toml  pytest.ini  setup.py  tox.ini
.devcontainer/: devcontainer.json  postCreateCommands.sh
.github/workflows/: bump-version.yml  github-actions.yml
codex/: codex_000.md  codex_001.md
codex/prompts/: codex_001.txt
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  laser_cholera.metapop.rst  laser_cholera.rst
src/laser_cholera/: __init__.py  __main__.py  _core.c  cli.py  iso_codes.py  likelihood.py  proppop.py  sc.py  test.py  utils.py
src/laser_cholera/metapop/: __init__.py  analyzer.py  births.py  census.py  defaults.py  derivedvalues.py  environmental.py  envtohuman.py  envtohumanvax.py  exposed.py  humantohuman.py  humantohumanvax.py  infected.py  infectious.py  lambda_.py  logging.py  model.py  params.py  population.py  psi.py  recorder.py  recovered.py  scenario.py  susceptible.py  susceptibles.py  transmission.py  utils.py  vaccinated.py  wash.py
src/laser_cholera/metapop/data/: default_parameters.h5  default_parameters.json  default_parameters.yaml  demographics_africa_2000_2023.csv  mosaic_countries.dbf  mosaic_countries.shx  mosaic_countries_01pct.dbf  mosaic_countries_01pct.shp  mosaic_countries_01pct.shx  param_epsilon_immune_decay.csv  param_nu_vaccination_rate.csv  param_omega_vaccine_effectiveness.csv  param_phi_vaccine_effectiveness.csv  param_pi_diffusion.csv  param_seasonal_dynamics.csv  param_sigma_prop_symptomatic.csv  param_tau_departure.csv  param_theta_WASH.csv  pred_psi_suitability.csv
src/laser_metapop/: __init__.py  model.py  params.py  utils.py
tests/: test_census.py  test_cli.py  test_core.py  test_environmental.py  test_envtohuman.py  test_envtohumanvax.py  test_exposed.py  test_humantohuman.py  test_humantohumanvax.py  test_infectious.py  test_likelihood.py  test_metapop.py  test_metapop_utils.py  test_model.py  test_params.py  test_recovered.py  test_susceptible.py  test_vaccinated.py  test_vitalstatistics.py
